# project_skeleton

./: CMakeLists.txt  README.md  config.h.in
cmake/: check_c_env.cmake  set_compiler_flags.cmake  stm32-gcc.cmake
doc/: doxyfile
include/: dummy.h
scripts/: indent.sh
src/: CMakeLists.txt  dummy.c
tests/: CMakeLists.txt  dummy_test.cpp
